# simple-pdf-parser

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  docker-setup.sh  pyproject.toml  pytest.ini  run.sh  start_worker.sh  worker.py
app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  middleware.py
app/models/: schemas.py
app/routes/: api.py
app/services/: redis_service.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf
frontend/src/: App.css  App.jsx  config.js  index.css
frontend/src/components/: ErrorDisplay.css  ErrorDisplay.jsx  Processing.css  Processing.jsx  Results.css  Results.jsx  Upload.css  Upload.jsx
tests/: conftest.py  test_api.py
